<resources>
    <string name="app_name">FamFinder</string>
    <string name="Title">FamFinder</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enterlogin">Enter Username</string>
    <string name="enterpassword">Enter Password</string>
    <string name="Join_Group">Join\nGroup</string>
    <string name="Create_Group1">Create\nGroup</string>
    <string name="Create_Group2">Create Group</string>
    <string name="signup">Sign Up</string>
    <string name="Application">Application</string>
    <string name="Spaces">Vacancies Avail</string>
    <string name="Manage">Requests</string>
    <string name="activity_main_drawer_open">A</string>
    <string name="activity_main_drawer_close">B</string>
</resources>
