<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options"
    >

    <TextView
        android:layout_width="422dp"
        android:layout_height="148dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:text="Groups"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30dp"></TextView>

    <ImageButton
        android:id="@+id/Join_Group"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/join"
        android:text="@string/Join_Group"
        android:textSize="15dp" />

    <ImageButton
        android:id="@+id/Create_Group"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/create"
        android:text="@string/Create_Group1"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/create_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="109dp"
        android:text="Create"
        android:textColor="@color/white"
        android:textSize="25dp"></TextView>

    <TextView
        android:id="@+id/join_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="76dp"
        android:text="Join"
        android:textColor="@color/white"
        android:textSize="25dp"></TextView>

    <Button
        android:id="@+id/Manage_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="59dp"
        android:text="@string/Manage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="160dp"
        android:text="Your groups"
        android:textColor="@color/black"
        android:textSize="20dp"></TextView>

    <ListView
        android:id="@+id/options_listview"
        android:layout_width="match_parent"
        android:layout_height="604dp"
        android:layout_below="@+id/Join_Group"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="61dp"></ListView>

</RelativeLayout>